# livestreak

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .prettierrc.json  AGENTS.md  Dockerfile  README.md  TODO.md  deploy.sh  dev-remote.sh  dev-sui.sh  dev.sh  eslint.config.js  package-lock.json  package-re2.json  package.json
cli/: package.json  pyproject.toml
cli/bridges/: agent-register.ts  flow-read.ts  flow-write.ts  status.ts  vault-read.ts  vault-write.ts
cli/docs/: TODO.md  dev-stack.md
cli/src/: main.ts
cli/src/adapters/: bookmaker-edge.ts  bookmaker.ts  faucet.ts  host.ts  observe-edge.ts  observe.ts  onchain.ts  options-edge.ts  options.ts  revert.ts  steward-edge.ts  steward.ts  stream.ts
cli/src/chains/: evm-tx.ts  evm.ts
cli/src/commands/: args.ts  auth.ts  claim-routing.ts  cli-args.ts  context.ts  faucet.ts  init.ts  keystore.ts  lanes.ts  login.ts  nft.ts  options.ts  produce.ts  remote.ts  settings.ts  settle.ts  steward.ts  stream.ts  (+2 more)
cli/test/: console-edge.test.ts  decode-revert.test.ts  e2e.live.test.ts  faucet.test.ts  gateway-console-functions.test.ts  gateway-keystore.test.ts  gateway-relay.test.ts  gateway-session.test.ts  host.test.ts  identity-init.test.ts  init.test.ts  lanes.test.ts  login.test.ts  market.test.ts  nft-commands.test.ts  nft-mint.test.ts  options.test.ts  password.test.ts  produce.live.test.ts  remote-drive.test.ts  remote-gateway.test.ts  revert.test.ts  settings.test.ts  settle-discover.test.ts  settle.test.ts  stake.test.ts  steward.test.ts  stream-metadata.test.ts  token-default.test.ts  vault.test.ts
(+435 files in other folders)
