[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "flowstream"
version = "0.1.0"
description = "FlowStream CLI — live prediction market on Arc"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.9",
    "rich>=13",
    "web3>=6,<8",
    "cryptography>=41",
    "websockets>=12",
]

[project.scripts]
flowstream = "flowstream_cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]
